--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@alan-ai/alan-sdk-web": "^1.8.53",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "@mui/styled-engine-sc": "^5.14.12",
